--- a/Jemuran.html
+++ b/Jemuran.html
@@ -675,15 +675,8 @@
         <!-- 3D GRASS BLADES THAT MOVE WITH WIND -->
         <a-entity id="grassBlades"></a-entity>
 
-        <!-- ENHANCED GROUND SHADOW & BASE -->
-        <a-circle radius="6.5" position="0 0.02 0" rotation="-90 0 0" color="#000000"
-          material="transparent: true; opacity: 0.35; shader: flat"></a-circle>
-        <a-circle radius="3.5" position="0 0.025 0" rotation="-90 0 0" color="#000000"
-          material="transparent: true; opacity: 0.25; shader: flat"></a-circle>
-
-        <!-- Shadow directly under rack -->
-        <a-plane width="6" height="5" position="0 0.03 0.5" rotation="-90 0 0" color="#000000"
-          material="transparent: true; opacity: 0.3; shader: flat"></a-plane>
+        <!-- SHADOW REMOVED FOR AR COMPATIBILITY -->
+        <!-- Shadow elements disabled karena menyebabkan area hitam di AR mode -->
 
         <!-- ENHANCED LIGHTING -->
         <a-light type="ambient" color="#fff8f0" intensity="0.65"></a-light>
